<resources>
    <string name="app_name">Notepad</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="hint_title">Title…</string>
    <string name="hint_content">Insert content here…</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="not_found_notes">Not found Notes</string>
    <string name="field_cannot_be_blank">%1$s cannot be blank</string>
    <string name="note_deleted">Note deleted</string>
</resources>