<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/hint_title"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_title"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/action_bold"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_bold_black_24dp" />

                    <ImageButton
                        android:id="@+id/action_italic"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_italic_black_24dp" />

                    <ImageButton
                        android:id="@+id/action_underline"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_underline_black_24dp" />

                    <ImageButton
                        android:id="@+id/action_insert_numbers"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_numbers_black_24dp" />

                    <ImageButton
                        android:id="@+id/action_insert_bullets"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_bullets_black_24dp" />

                </LinearLayout>

            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <jp.wasabeef.richeditor.RichEditor
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btn_save"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/button_secondary"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_delete"
        android:textColor="@color/red"
        android:visibility="gone"
        app:strokeColor="@color/red" />

</LinearLayout>